overflow issue resolved

--- a/src/index.sass
+++ b/src/index.sass
@@ -10,4 +10,4 @@
     background-repeat: no-repeat
     height: 100vh
     width: 100vw
-    overflow: hidden
+    overflow: visible
